src/components/Nav.css
.navbarMobile {
    background-color: rgb(22, 22, 22);
    height: 100px;
    width: 100%;
    display: flex;
    position: fixed;
    justify-content: space-around;
    gap: 30px;
    align-items: center;
    top: 0;
    left: 0;
    z-index: 1000
}
.navbarDesktop {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
    height: 100px;
    justify-content: space-between;
    padding: 50px;
    align-items: center;
}
.navLinks {
    display: flex;
    gap: 40px;
    color: #9c9a9a;
    font-size: clamp(1rem ,2vw ,1.1rem);
    cursor: pointer;
}
/*.navLinks :hover {
    color: rgba(231, 109, 9, 0.7);
}*/
.navContainer > nav > .logo{
    font-size: 1.4rem;
    font-weight: bold;
    color: rgb(231, 109, 9);
    text-transform: uppercase;
}
.navBtn {
    background-color: rgb(231, 109, 9);
    color: #fff;
    border: 1px solid transparent;
    border-radius: 5px;
    padding: 0.2rem 1.2rem;
    cursor: pointer;
}
.navBtn:hover {
    background-color: rgba(231, 109, 9, 0.9);
    
}
.menuIcon {
    color: #9c9a9a;
    cursor: pointer;
}
.menuIcon:hover {
    color: rgba(231, 109, 9, 0.9);
}
.dropMenuList {
    
    background-color:  rgb(22, 22, 22);
    position: fixed;
    left: 0;
    width: 100%;
    height: calc(100vh - 200px);
    display: flex;
    flex-direction: column;
    gap: 40px;
    padding-top: 20px;
    padding-left: 40px;
    color: #645f5f;
    z-index: 999;
    backdrop-filter: blur(8px);
}
.dropMenuList > div {
    cursor: pointer;
    font-size: 1.2rem;
    transition: color 0.3s ease;
}

/*.dropMenuList > div:hover {
    color: rgba(231, 109, 9, 0.7);
    text-decoration: underline;
}*/

@media (min-width:768px){
    .navbarMobile {
        display: none;
    }
    .dropMenuList {
        display: none;
    }
    .navbarDesktop {
        background-color: rgb(22, 22, 22);
        display: flex;
    }
    
}

@media (min-width:900px){
    .navbarDesktop {
        padding-left: 90px;
        padding-right: 90px;
    }
}

